--- a/machine.html
+++ b/machine.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -72,7 +72,7 @@ Company' 50 Most Innovative Companies ranking. Our Data Scientist Chapter?...</p
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/FF5155CCC4'>SmartNews, Inc. - Jobs: Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/FF5155CCC4'>SmartNews, Inc. - Jobs: Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -116,7 +116,7 @@ MTailor.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tfgco/6fccee95-dadd-4426-a82e-74196c5c8ccc/apply'>TFG Co - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tfgco/6fccee95-dadd-4426-a82e-74196c5c8ccc/apply'>TFG Co - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 13, 2019 ... Machine Learning Engineer. S?o Paulo. Engineering ? Data Engineering. Full-
 time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</p>
@@ -126,7 +126,7 @@ time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p>Jul 13, 2019 ... Staff Machine Learning Engineer - Core Algorithms. Remote. Engineering ? 
 Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -142,7 +142,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318057002'>Job Application for Senior Backend Engineers Machine Learning  at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318057002'>Job Application for Senior Backend Engineers Machine Learning  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -256,7 +256,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -268,7 +268,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -311,7 +311,7 @@ Atypon Systems.</p>
 Learning Engineer in Tech-Startup in Berlin (published: 11.07.2019). Apply now 
 or?...</p>
 <hr/>
-<h5><a href='https://eygbl.referrals.selectminds.com/jobs/ttt-machine-learning-ai-azure-cognitive-azure-ml-python-senior-90059'>TTT - Machine Learning /AI (Azure Cognitive/Azure ML/Python ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/ttt-machine-learning-ai-azure-cognitive-azure-ml-python-senior-90059'>TTT - Machine Learning /AI (Azure Cognitive/Azure ML/Python ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As a member of EY's core Tax practice, you'll develop a deep tax technical 
 knowledge and outstanding database, data analytics and programming skills.</p>
@@ -366,7 +366,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/getdor/25a3741b-ed30-4d41-80b9-075573ab5c32'>Dor - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/getdor/25a3741b-ed30-4d41-80b9-075573ab5c32'>Dor - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Machine Learning Engineer. San Francisco. Engineering. Full-time. Apply for this 
 job. Dor is a retail analytics startup that uses a first-of-its-kind hardware and?...</p>
@@ -387,7 +387,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light">Mc Lean, VA Mc Lean, VA Mc Lean, VA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://llamasoft.applytojob.com/apply/N5i4zgsKml/Sr-Machine-Learning-Scientist'>Sr. Machine Learning Scientist - LLamasoft - Career Page</a></h5> 
+<h5><a href='http://llamasoft.applytojob.com/apply/N5i4zgsKml/Sr-Machine-Learning-Scientist'>Sr. Machine Learning Scientist - LLamasoft - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -412,7 +412,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... You're a research scientist who has published in top tier conferences and are 
 passionate about having a positive impact on the world. You are enthusiastic?...</p>
@@ -421,7 +421,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/criteo/b6d1de19-5e8c-4372-a234-48d3566f29f0'>Criteo - Lead Developer - Software Engineering &amp; Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/b6d1de19-5e8c-4372-a234-48d3566f29f0'>Criteo - Lead Developer - Software Engineering &amp; Machine Learning</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -431,7 +431,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
+<h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
