--- a/project-manager.html
+++ b/project-manager.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oZBhafwL'>Automation Anywhere Careers - Sr. Technical Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oZBhafwL'>Automation Anywhere Careers - Sr. Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/softcat/job/o7aBafwM'>Softcat Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/softcat/job/o7aBafwM'>Softcat Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Manchester London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -168,7 +168,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://greatminds.recruitee.com/o/senior-it-project-managerscrum-master'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greatminds.recruitee.com/o/senior-it-project-managerscrum-master'>
       Senior IT Project Manager/Scrum Master - Great Minds
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -182,7 +182,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4369175002'>Job Application for Project Manager - Customer Success at Arctic Wolf Networks</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4369175002'>Job Application for Project Manager - Customer Success at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -246,7 +246,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/jxpY5wI4Ga/Project-Manager-9276707'>Project Manager (9276707) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/jxpY5wI4Ga/Project-Manager-9276707'>Project Manager (9276707) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -268,7 +268,7 @@
 <p><span class="badge badge-light">Denver Denver</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999692174805-jde-project-manager'>Version 1 JDE Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999692174805-jde-project-manager'>Version 1 JDE Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -280,7 +280,7 @@
 <p><span class="badge badge-light">California North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1780971'>Job Application for Technical Program Manager at Fitbit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1780971'>Job Application for Technical Program Manager at Fitbit</a></h5> 
 <p><span class="badge badge-light">Minsk</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -306,7 +306,7 @@
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -326,11 +326,11 @@
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1785288'>Job Application for Project Manager - New Factory: Composites Production at Lilium</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lilium/jobs/1785288'>Job Application for Project Manager - New Factory: Composites Production at Lilium</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1785303'>Job Application for Project Manager - New Factory: Propulsion System Assembly at Lilium</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lilium/jobs/1785303'>Job Application for Project Manager - New Factory: Propulsion System Assembly at Lilium</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -394,11 +394,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/55119655DE'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/55119655DE'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/56C98377BC'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/56C98377BC'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -430,7 +430,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/88CC4E2E30'>Right At School - Jobs: After-School Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/88CC4E2E30'>Right At School - Jobs: After-School Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
